--- a/languages/better-plugin-compatibility-control-it_IT.po
+++ b/languages/better-plugin-compatibility-control-it_IT.po
@@ -2,62 +2,62 @@
 # This file is distributed under the same license as the Development (trunk) package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2016-01-05 15:17:37+0000\n"
+"PO-Revision-Date: 2016-03-31 15:08:35+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: GlotPress/1.0-alpha-1100\n"
+"X-Generator: GlotPress/2.1.0-alpha\n"
 "Project-Id-Version: Development (trunk)\n"
 
-#: better-plugin-compatibility-control.php:200
+#: better-plugin-compatibility-control.php:213
 msgid "No readme.txt file for this plugin found. Contact the plugin author!"
-msgstr ""
+msgstr "Nessun file readme.txt per questo plugin trovato. Contattare l'autore del plugin!"
 
-#: better-plugin-compatibility-control.php:200
+#: better-plugin-compatibility-control.php:213
 msgid "No compatibility data found"
-msgstr ""
+msgstr "Nessun dato di compatibilità trovato"
 
-#: better-plugin-compatibility-control.php:229
+#: better-plugin-compatibility-control.php:242
 msgid "Better Plugin Compatibility Control requires at least WordPress 2.9!"
-msgstr ""
+msgstr "Better Plugin Compatibility Control richiede come minimo WordPress 2.9!"
 
 #. Plugin Name of the plugin/theme
 msgid "Better Plugin Compatibility Control"
-msgstr ""
+msgstr "Better Plugin Compatibility Control"
 
 #. Plugin URI of the plugin/theme
 msgid "http://www.schloebe.de/wordpress/better-plugin-compatibility-control-plugin/"
-msgstr ""
+msgstr "http://www.schloebe.de/wordpress/better-plugin-compatibility-control-plugin/"
 
 #. Description of the plugin/theme
 msgid "Adds version compatibility info to the plugins page to inform the admin at a glance if a plugin is compatible with the current WP version."
-msgstr ""
+msgstr "Aggiunge informazioni di compatibilità di versione alla pagina dei plugin per segnalare all'amministratore, a colpo d'occhio, se un plugin è compatibile con la versione di WP corrente."
 
 #. Author of the plugin/theme
 msgid "Oliver Schl&ouml;be"
-msgstr ""
+msgstr "Oliver Schl&ouml;be"
 
 #. Author URI of the plugin/theme
 msgid "http://www.schloebe.de/"
-msgstr ""
+msgstr "http://www.schloebe.de/"
 
-#: better-plugin-compatibility-control.php:191
-#: better-plugin-compatibility-control.php:195
+#: better-plugin-compatibility-control.php:204
+#: better-plugin-compatibility-control.php:208
 msgid "Warning: This plugin has not been tested with your current version of WordPress."
-msgstr ""
+msgstr "Attenzione: questo plugin non è stato testato con la versione corrente di WordPress."
 
-#: better-plugin-compatibility-control.php:191
-#: better-plugin-compatibility-control.php:195
+#: better-plugin-compatibility-control.php:204
+#: better-plugin-compatibility-control.php:208
 msgid "This plugin has been tested successfully with your current version of WordPress."
-msgstr ""
+msgstr "Questo plugin è stato testato con successo con la versione corrente di WordPress."
 
-#: better-plugin-compatibility-control.php:192
-#: better-plugin-compatibility-control.php:196
+#: better-plugin-compatibility-control.php:205
+#: better-plugin-compatibility-control.php:209
 msgid "No compatibility info for this plugin available."
-msgstr ""
+msgstr "Non è disponibile alcuna informazione di compatibilità per questo plugin."
 
-#: better-plugin-compatibility-control.php:192
-#: better-plugin-compatibility-control.php:196
+#: better-plugin-compatibility-control.php:205
+#: better-plugin-compatibility-control.php:209
 msgid "N/A"
 msgstr "n.d."
